<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_song_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_song_dialog" />

    <EditText
        android:id="@+id/add_song_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_song_name_input"/>

    <EditText
        android:id="@+id/add_band_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_artist_input"/>

    <EditText
        android:id="@+id/add_wikiSong_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_wikipediaSong_input" />

    <EditText
        android:id="@+id/add_wikiArtist_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_wikipediaArtist_input" />

    <EditText
        android:id="@+id/add_url_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_media_input" />


    <Button
        android:id="@+id/enter_song_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_song_button" />
</LinearLayout>